hphp/test/zend7/Zend/tests/bug69905.php.expectf

Fatal error: %s
Stack trace:
#0 {main}
  thrown in %sbug69905.php on line 2